# SimpleEthClient

./: CMakeLists.txt  ClientApp.cpp  ClientApp.h  README.md  ToDos.md  main.cpp  node_config.h  session.h  stream_handlers.h
Utils/: ByteUtils.h  CMakeLists.txt  RLP.cpp  RLP.h
cmake/: CodeStyle.cmake
crypto/: KeyGenerator.cpp  KeyGenerator.h  RLPUtils.h
libs/Utils/: ByteUtils.h  CMakeLists.txt  Hex.cpp  Hex.h  MPT.cpp  MPT.h  RLP.cpp  RLP.h  RLPConstants.h
libs/hash-library/: CMakeLists.txt
src/: CMakeLists.txt  ClientApp.cpp  ClientApp.h  main.cpp  node_config.h  session.cpp
src/Crypto/: KeyGenerator.cpp  KeyGenerator.h
tests/: CMakeLists.txt  mpt_tests.cpp  rlp_tests.cpp  tests.cpp
